--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,20 @@
 {
-  "name": "IndiTube",
-  "short_name": "IndiTube",
-  "start_url": ".",
+  "name": "IndiTubes",
+  "short_name": "IndiTubes",
+  "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#fff8f0",
-  "theme_color": "#d40000",
+  "background_color": "#f2f3f5",
+  "theme_color": "#e53935",
   "icons": [
-    {"src": "icon-192.png","sizes": "192x192","type": "image/png"},
-    {"src": "icon-512.png","sizes": "512x512","type": "image/png"}
+    {
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
   ]
 }
